# docker-selenium-lambda

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  lambda_function.py  pyproject.toml  requirements.txt
.code_quality/: .hadolint.yaml
.github/workflows/: docker-build-push.yml  docker-lint.yml
browsers/: __init__.py  chromium.py  firefox.py  tor.py
scripts/: install-chromium.sh  install-firefox.sh  install-tor.sh
