[project]
name = "docker-selenium-lambda"
version = "0.1.0"
description = "Docker Selenium Lambda"
authors = [
    {name = "Fernando Celmer", email = "email@fernandocelmer.com"}
]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "selenium>=4.38.0,<5.0.0"
]

[tool.poetry]
name = "docker-selenium-lambda"
version = "0.1.0"
description = "Docker Selenium Lambda"
authors = ["Fernando Celmer <email@fernandocelmer.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    {include = "browsers"},
    {include = "lambda_function.py"},
]

[tool.poetry.dependencies]
python = "^3.14"
selenium = ">=4.38.0,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
